--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a>href="skills">Skills</a>
+                <li><a href="skills">Skills</a>
                 <li><a href="#process">Process</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -1388,6 +1388,7 @@
     </script>
 </body>
 </html>
+
 
 
 
